--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.15.1
 charset-normalizer==3.0.1
 click==8.1.3
 docutils==0.19
+flash==1.0.3
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
@@ -16,11 +17,13 @@ Jinja2==3.1.2
 Kivy-Garden==0.1.5
 Mako==1.2.4
 MarkupSafe==2.1.2
+PyAudio==0.2.13
 pycodestyle==2.10.0
 pycparser==2.21
 Pygments==2.14.0
 requests==2.28.2
 soundfile==0.11.0
+SpeechRecognition==3.9.0
 SQLAlchemy==1.4.46
 tomli==2.0.1
 urllib3==1.26.14
