--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,21 @@
 {
-  "builds":[
-	  {"src":"/app","use":"@vercel/python" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/app"
+    }
   ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/app" }
   ]
+  "env": {
+    "FLASK_ENV": "production"
+  }
 }
