--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Jinja2==3.1.2
 Kivy-Garden==0.1.5
 Mako==1.2.4
 MarkupSafe==2.1.2
-PyAudio==0.2.13
+# PyAudio==0.2.13
 pycodestyle==2.10.0
 pycparser==2.21
 Pygments==2.14.0
