--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ greenlet==2.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-Kivy-Garden==0.1.5
+# Kivy-Garden==0.1.5
 Mako==1.2.4
 MarkupSafe==2.1.2
 # PyAudio==0.2.13
@@ -22,7 +22,7 @@ pycodestyle==2.10.0
 pycparser==2.21
 Pygments==2.14.0
 requests==2.28.2
-soundfile==0.11.0
+# soundfile==0.11.0
 SpeechRecognition==3.9.0
 SQLAlchemy==1.4.46
 tomli==2.0.1
